# sixtracklib_gsoc18

studies/: readme
studies/study0/: hello_workaround.cpp  makefile
studies/study10/: CMakeLists.txt  Readme.md  run_sample_fodo.c  sample_fodo.c
studies/study8_martin/: CMakeLists.txt  test_particles.cpp
